added some words to locale file(do not use web service anymore)

--- a/src/po/es/es.po
+++ b/src/po/es/es.po
@@ -14,4 +14,19 @@ msgstr "Juega ahora!"
 msgid "Clics"
 msgstr "Clics"
 
+#managerdata.py
+msgid "Title"
+msgstr "Título"
+
+#managerdata.py
+msgid "Author"
+msgstr "Autor"
+
+#managerdata.py
+msgid "Area"
+msgstr "Area"
+
+#managerdata.py
+msgid "Language"
+msgstr "Idioma"
 
