--- a/src/po/es/es.po
+++ b/src/po/es/es.po
@@ -2,31 +2,41 @@
 msgid "Clics Player"
 msgstr "Reproductor de Clics"
 
-#manager.py
-msgid "Select a Clic"
-msgstr "Elige un Clic"
 
 #manager.py
-msgid "Play now!"
-msgstr "Juega ahora!"
+msgid "SELECT A CLIC TO PLAY"
+msgstr "ELIGE UN CLIC PARA JUGAR"
+
 
 #manager.py
-msgid "Clics"
-msgstr "Clics"
+msgid "SELECT A CLIC TO DELETE"
+msgstr "ELIGE UN CLIC PARA BORRAR"
 
-#managerdata.py
-msgid "Title"
-msgstr "Título"
 
-#managerdata.py
-msgid "Author"
-msgstr "Autor"
+#manager.py
+msgid "DO YOU REALLY WANT TO DELETE"
+msgstr "SEGURO QUE QUIERES BORRAR"
 
-#managerdata.py
-msgid "Area"
-msgstr "Area"
 
-#managerdata.py
-msgid "Language"
-msgstr "Idioma"
+#downloadmanager.py
+msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNA VEZ DESCARGADO, TENDRAS EL CLIC EN TU LISTADO."
+
+#manager.py
+msgid "MANUAL"
+msgstr "MANUAL"
+
+#manager.py
+msgid "ABOUT"
+msgstr "ACERCA DE..."
+
+#manager.py
+msgid "DOWNLOAD CLICS"
+msgstr "DESCARGAR CLICS"
+
+#manager.py
+msgid "MY CLICS"
+msgstr "MIS CLICS"
+
+
 
