--- a/src/po/fr.po
+++ b/src/po/fr.po
@@ -22,6 +22,18 @@ msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
 msgstr "UNE FOIS TÉLÉCHARGÉ, VOUS AUREZ LE CLIC DANS VOTRE LISTE"
 
 #manager.py
+msgid "HOME PAGE"
+msgstr "ACCUEIL"
+
+#manager.py
+msgid "MAIN MENU"
+msgstr "MENU PRINCIPAL"
+
+#manager.py
+msgid "DELETE CLICS"
+msgstr "SUPPRIMER CLICS"
+
+#manager.py
 msgid "MANUAL"
 msgstr "MANUEL"
 
