added an alert if the download is not done. // clean code of clicInstaller // added a default icon if the Installer can't find one.

--- a/src/po/ca.po
+++ b/src/po/ca.po
@@ -18,9 +18,13 @@ msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "ESTÀS SEGUR D'ESBORRAR"
 
 
-#downloadmanager.py
+#clicInstaller.py
 msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
 msgstr "UNA VEGADA DESCARREGAT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "NO HA SIGUT POSSIBLE DESCARREGAR"
 
 #manager.py
 msgid "HOME PAGE"
