--- a/src/po/fr.po
+++ b/src/po/fr.po
@@ -17,9 +17,13 @@ msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "ETES-VOUS SÛR DE VOULOIR SUPPRIMER"
 
 
-#downloadmanager.py
+#clicInstaller.py
 msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNE FOIS TÉLÉCHARGÉ, VOUS AUREZ LE CLIC DANS VOTRE LISTE"
+msgstr "UNE FOIS TÉLÉCHARGÉ, VOUS AUREZ LE CLIC DANS VOTRE LISTE."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "IL N'ÉTAIT PAS POSSIBLE DE TÉLÉCHARGER"
 
 #manager.py
 msgid "HOME PAGE"
