--- a/src/po/es.po
+++ b/src/po/es.po
@@ -18,9 +18,13 @@ msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "SEGURO QUE QUIERES BORRAR"
 
 
-#downloadmanager.py
+#clicInstaller.py
 msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
 msgstr "UNA VEZ DESCARGADO, TENDRAS EL CLIC EN TU LISTADO."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "NO HA SIDO POSIBLE DESCARGAR"
 
 #manager.py
 msgid "HOME PAGE"
