--- a/src/po/fr.po
+++ b/src/po/fr.po
@@ -52,3 +52,27 @@ msgstr "TÉLÉCHARGER CLICS"
 #manager.py
 msgid "MY CLICS"
 msgstr "MES CLICS"
+
+#manager.py
+msgid "SELECT A CLIC TO ADD"
+msgstr "SÉLECTIONNE UN CLIC POUR AJOUTER"
+
+#manager.py
+msgid "ADDING CLIC..."
+msgstr "AJOUTANT CLIC..."
+
+#manager.py
+msgid "ADD CLICS"
+msgstr "AJOUTER CLICS"
+
+#manager.py
+msgid "IT WAS NOT POSSIBLE TO FIND ANY CLIC"
+msgstr "IL N'ÉTAIT PAS POSSIBLE DE TROUVER AUCUN CLIC"
+
+#manager.py
+msgid "IT WAS NOT POSSIBLE TO ADD THE CLIC"
+msgstr "IL N'ÉTAIT PAS POSSIBLE DE AJOUTER LE CLIC"
+
+#manager.py
+msgid "ADDED. LOOK ON YOUR LIST"
+msgstr "AJOUT. VUE DANS VOTRE LISTE"
