adding waiting mouse pointer

--- a/src/po/ca.po
+++ b/src/po/ca.po
@@ -59,10 +59,6 @@ msgid "SELECT A CLIC TO ADD"
 msgstr "ELIGE UN CLIC PARA AÑADIR"
 
 #manager.py
-msgid "ADDING CLIC..."
-msgstr "AFEGINT CLIC..."
-
-#manager.py
 msgid "ADD CLICS"
 msgstr "AFEGIR CLICS"
 
@@ -75,5 +71,9 @@ msgid "IT WAS NOT POSSIBLE TO ADD THE CLIC"
 msgstr "NO HA SIGUT POSSIBLE AFEGIR EL CLIC"
 
 #manager.py
-msgid "ADDED. LOOK ON YOUR LIST"
-msgstr "AFEGIT. MIRA EL TEU LLISTAT"
+msgid "ADDED, LOOK ON YOUR LIST"
+msgstr "AFEGIT, MIRA EL TEU LLISTAT"
+
+#clicInstaller.py
+msgid "ADDING CLIC..."
+msgstr "AFEGINT CLIC..."
