--- a/src/po/ca.po
+++ b/src/po/ca.po
@@ -17,15 +17,6 @@ msgstr "SELECCIONA UN CLIC PER ESBORRAR"
 msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "ESTÀS SEGUR D'ESBORRAR"
 
-
-#clicInstaller.py
-msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEGADA DESCARREGAT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
-
-#clicInstaller.py
-msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
-msgstr "NO HA SIGUT POSSIBLE DESCARREGAR"
-
 #manager.py
 msgid "CLICS TO DOWNLOAD"
 msgstr "CLICS PER DESCARREGAR"
@@ -75,5 +66,13 @@ msgid "ADDED, LOOK ON YOUR LIST"
 msgstr "AFEGIT, MIRA EL TEU LLISTAT"
 
 #clicInstaller.py
-msgid "ADDING CLIC..."
-msgstr "AFEGINT CLIC..."
+msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNA VEGADA DESCARREGAT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "NO HA SIGUT POSSIBLE DESCARREGAR"
+
+#clicInstaller.py
+msgid "ONCE ADDED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNA VEGADA AFEGIT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
