--- a/src/po/es.po
+++ b/src/po/es.po
@@ -17,15 +17,6 @@ msgstr "ELIGE UN CLIC PARA BORRAR"
 msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "SEGURO QUE QUIERES BORRAR"
 
-
-#clicInstaller.py
-msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEZ DESCARGADO, TENDRÁS EL CLIC EN TU LISTADO."
-
-#clicInstaller.py
-msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
-msgstr "NO HA SIDO POSIBLE DESCARGAR"
-
 #manager.py
 msgid "CLICS TO DOWNLOAD"
 msgstr "CLICS PARA DESCARGAR"
@@ -75,8 +66,16 @@ msgid "ADDED, LOOK ON YOUR LIST"
 msgstr "AÑADIDO, MIRA EN TU LISTADO"
 
 #clicInstaller.py
-msgid "ADDING CLIC..."
-msgstr "AÑADIENDO CLIC..."
+msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNA VEZ DESCARGADO, TENDRÁS EL CLIC EN TU LISTADO."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "NO HA SIDO POSIBLE DESCARGAR"
+
+#clicInstaller.py
+msgid "ONCE ADDED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNA VEZ AÑADIDO, TENDRÁS EL CLIC EN TU LISTADO."
 
 
 
