--- a/src/po/fr.po
+++ b/src/po/fr.po
@@ -16,15 +16,6 @@ msgstr "SÉLECTIONNE UN CLIC POUR SUPPRIMER"
 msgid "DO YOU REALLY WANT TO DELETE"
 msgstr "ETES-VOUS SÛR DE VOULOIR SUPPRIMER"
 
-
-#clicInstaller.py
-msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNE FOIS TÉLÉCHARGÉ, VOUS AUREZ LE CLIC DANS VOTRE LISTE."
-
-#clicInstaller.py
-msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
-msgstr "IL N'ÉTAIT PAS POSSIBLE DE TÉLÉCHARGER"
-
 #manager.py
 msgid "CLICS TO DOWNLOAD"
 msgstr "CLICS POUR TÉLÉCHARGER"
@@ -74,5 +65,13 @@ msgid "ADDED, LOOK ON YOUR LIST"
 msgstr "AJOUT, VUE DANS VOTRE LISTE"
 
 #clicInstaller.py
-msgid "ADDING CLIC..."
-msgstr "AJOUTER CLIC..."
+msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNE FOIS TÉLÉCHARGÉ, VOUS AUREZ LE CLIC DANS VOTRE LISTE."
+
+#clicInstaller.py
+msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
+msgstr "IL N'ÉTAIT PAS POSSIBLE DE TÉLÉCHARGER"
+
+#clicInstaller.py
+msgid "ONCE ADDED, YOU WILL HAVE THE CLIC ON YOUR LIST."
+msgstr "UNE FOIS AJOUT, VOUS AUREZ LE CLIC DANS VOTRE LISTE."
