--- a/src/po/ca.po
+++ b/src/po/ca.po
@@ -3,23 +3,6 @@ msgid "Clics Player"
 msgstr "Reproductor de Clics"
 
 
-#manager.py
-msgid "SELECT A CLIC TO PLAY"
-msgstr "SELECCIONA UN CLIC PER JUGAR"
-
-
-#manager.py
-msgid "SELECT A CLIC TO DELETE"
-msgstr "SELECCIONA UN CLIC PER ESBORRAR"
-
-
-#manager.py
-msgid "DO YOU REALLY WANT TO DELETE"
-msgstr "ESTÀS SEGUR D'ESBORRAR"
-
-#manager.py
-msgid "CLICS TO DOWNLOAD"
-msgstr "CLICS PER DESCARREGAR"
 
 #manager.py
 msgid "MAIN MENU"
@@ -46,33 +29,75 @@ msgid "MY CLICS"
 msgstr "ELS MEUS CLICS"
 
 #manager.py
-msgid "SELECT A CLIC TO ADD"
-msgstr "ELIGE UN CLIC PARA AÑADIR"
-
-#manager.py
 msgid "ADD CLICS"
 msgstr "AFEGIR CLICS"
 
-#manager.py
-msgid "IT WAS NOT POSSIBLE TO FIND ANY CLIC"
-msgstr "NO HA SIGUT POSSIBLE TROBAR CAP CLIC"
+
 
 #manager.py
-msgid "IT WAS NOT POSSIBLE TO ADD THE CLIC"
-msgstr "NO HA SIGUT POSSIBLE AFEGIR EL CLIC"
+msgid "SELECT A CLIC TO PLAY"
+msgstr "SELECCIONA UN CLIC PER JUGAR"
 
 #manager.py
-msgid "ADDED, LOOK ON YOUR LIST"
-msgstr "AFEGIT, MIRA EL TEU LLISTAT"
+msgid "SELECT A CLIC TO DELETE"
+msgstr "SELECCIONA UN CLIC PER ESBORRAR"
+
+#manager.py
+msgid "CLICS TO DOWNLOAD"
+msgstr "CLICS PER DESCARREGAR"
+
+#manager.py
+msgid "SELECT A CLIC TO ADD"
+msgstr "SELECCIONA UN CLIC PER AFEGIR"
+
+
+
+#manager.py
+msgid "Do you really want to delete that Clic?"
+msgstr "Vols esborrar aquest Clic?"
 
 #clicInstaller.py
-msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEGADA DESCARREGAT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
+msgid "Adding Clic"
+msgstr "Afegint Clic"
 
 #clicInstaller.py
-msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
-msgstr "NO HA SIGUT POSSIBLE DESCARREGAR"
+msgid "Once added, you will have the Clic on your list"
+msgstr "Una vegada afegit, tindrás el Clic en el teu llistat"
 
 #clicInstaller.py
-msgid "ONCE ADDED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEGADA AFEGIT, TINDRÀS EL CLIC EN EL TEU LLISTAT."
+msgid "Clic not added"
+msgstr "Clic no afegit"
+
+#manager.py
+msgid "It was not possible to add the Clic"
+msgstr "No ha sigut possible afegir el Clic"
+
+#manager.py
+msgid "Finding Clics"
+msgstr "Buscant Clics"
+
+#manager.py
+msgid "It was not possible to find any Clic"
+msgstr "No ha sigut possible trobar cap Clic"
+
+
+
+#manager.py
+msgid "Delete Clic"
+msgstr "Borrar Clic"
+
+#clicInstaller.py
+msgid "Downloading Clic"
+msgstr "Descarregant Clic"
+
+#clicInstaller.py
+msgid "Once downloaded, you will have the Clic on your list"
+msgstr "Una vegada descarregat, tindràs el Clic en el teu llistat"
+
+#clicInstaller.py
+msgid "Download failed"
+msgstr "Descarrega fallida"
+
+#clicInstaller.py
+msgid "It was not possible to download the Clic"
+msgstr "No ha sigut possible descarregar el Clic"
