--- a/src/po/es.po
+++ b/src/po/es.po
@@ -3,23 +3,6 @@ msgid "Clics Player"
 msgstr "Reproductor de Clics"
 
 
-#manager.py
-msgid "SELECT A CLIC TO PLAY"
-msgstr "ELIGE UN CLIC PARA JUGAR"
-
-
-#manager.py
-msgid "SELECT A CLIC TO DELETE"
-msgstr "ELIGE UN CLIC PARA BORRAR"
-
-
-#manager.py
-msgid "DO YOU REALLY WANT TO DELETE"
-msgstr "SEGURO QUE QUIERES BORRAR"
-
-#manager.py
-msgid "CLICS TO DOWNLOAD"
-msgstr "CLICS PARA DESCARGAR"
 
 #manager.py
 msgid "MAIN MENU"
@@ -46,36 +29,79 @@ msgid "MY CLICS"
 msgstr "MIS CLICS"
 
 #manager.py
-msgid "SELECT A CLIC TO ADD"
-msgstr "ELIGE UN CLIC PARA AÑADIR"
-
-#manager.py
 msgid "ADD CLICS"
 msgstr "AÑADIR CLICS"
 
-#manager.py
-msgid "IT WAS NOT POSSIBLE TO FIND ANY CLIC"
-msgstr "NO FUE POSIBLE ENCONTRAR NINGÚN CLIC"
+
 
 #manager.py
-msgid "IT WAS NOT POSSIBLE TO ADD THE CLIC"
-msgstr "NO FUE POSIBLE AÑADIR EL CLIC"
+msgid "SELECT A CLIC TO PLAY"
+msgstr "ELIGE UN CLIC PARA JUGAR"
 
 #manager.py
-msgid "ADDED, LOOK ON YOUR LIST"
-msgstr "AÑADIDO, MIRA EN TU LISTADO"
+msgid "SELECT A CLIC TO DELETE"
+msgstr "ELIGE UN CLIC PARA BORRAR"
+
+#manager.py
+msgid "CLICS TO DOWNLOAD"
+msgstr "CLICS PARA DESCARGAR"
+
+#manager.py
+msgid "SELECT A CLIC TO ADD"
+msgstr "ELIGE UN CLIC PARA AÑADIR"
+
+
+#manager.py
+msgid "Delete Clic"
+msgstr "Borrar Clic"
+
+#manager.py
+msgid "Do you really want to delete that Clic?"
+msgstr "¿Seguro que quieres borrar este Clic?"
 
 #clicInstaller.py
-msgid "ONCE DOWNLOADED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEZ DESCARGADO, TENDRÁS EL CLIC EN TU LISTADO."
+msgid "Adding Clic"
+msgstr "Añadiendo Clic"
 
 #clicInstaller.py
-msgid "IT WAS NOT POSSIBLE TO DOWNLOAD"
-msgstr "NO HA SIDO POSIBLE DESCARGAR"
+msgid "Once added, you will have the Clic on your list"
+msgstr "Una vez añadido, tendrás el Clic en tu listado"
 
 #clicInstaller.py
-msgid "ONCE ADDED, YOU WILL HAVE THE CLIC ON YOUR LIST."
-msgstr "UNA VEZ AÑADIDO, TENDRÁS EL CLIC EN TU LISTADO."
+msgid "Clic not added"
+msgstr "Clic no añadido"
+
+#manager.py
+msgid "It was not possible to add the Clic"
+msgstr "No fue posible añadir el Clic"
+
+#manager.py
+msgid "Finding Clics"
+msgstr "Buscando Clics"
+
+#manager.py
+msgid "It was not possible to find any Clic"
+msgstr "No fue posible encontrar ningún Clic"
+
+
+
+#clicInstaller.py
+msgid "Downloading Clic"
+msgstr "Descargando Clic"
+
+#clicInstaller.py
+msgid "Once downloaded, you will have the Clic on your list"
+msgstr "Una vez descargado, tendrás el Clic en tu listado"
+
+#clicInstaller.py
+msgid "Download failed"
+msgstr "Descarga fallida"
+
+#clicInstaller.py
+msgid "It was not possible to download the Clic"
+msgstr "No ha sido posible descargar el Clic"
+
+
 
 
 
